<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eNombre"
        android:hint="@string/nombre"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eTelefono"
        android:inputType="number"
        android:hint="@string/telefono"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eCorreo"
        android:inputType="textEmailAddress"
        android:hint="@string/correo"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bGuardar"
        android:text="@string/guardar"
        android:onClick="guardarClicked"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bBuscar"
        android:text="@string/buscar"
        android:onClick="buscarClicked"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bEliminar"
        android:text="@string/eliminar"
        android:onClick="eliminarClicked"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bActualizar"
        android:text="@string/actualizar"
        android:onClick="actualizarClicked"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bListar"
        android:text="@string/listar"
        android:onClick="listarClicked"/>




</LinearLayout>